[tool.poetry]
name = "erda"
version = "0.1.0"
description = ""
authors = ["yamasakih <yamasaki.phone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
yapf = "^0.30.0"
pytest = "^6.0.1"
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
