[metadata]
name = ERDA
version = attr: erda.__version__
url = https://github.com/yamasakih/ERDA
license = MIT
author = Hiroyuki Yamasaki
author_email = yamasaki.phone@gmail.com
description = Plot predictiveness curve
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = License :: OSI Approved :: MIT License

[options]
packages = erda
python_requires = >=3.7
install_requires = 
    numpy >= 1.19.1

[flake8]
exclude =
    ./.mypy_cache/,
    ./.pytest_cache/,
    ./.venv/,
    ./build/,
    ./docs/

[mypy]
[mypy-numpy]
ignore_missing_imports = True
